# soc-agent-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
soc_agent_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
soc_environment/: env.py  graders.py  models.py
soc_environment/mock_data/: firewall.json  processes.json  quarantine.json  syslog
