[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-agent-env"
version = "1.0.0"
description = "A simulated Security Operations Center for AI Agents"
authors = [
    {name = "Hackathon Team"}
]
dependencies = [
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
    "httpx==0.27.2"
]

[project.scripts]
server = "server.app:main"